[package]
name = "rustdeskup"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking"] }
tempdir = "0.3.7"

[profile.release]
lto = true
opt-level = "z" # Optimize for size.
strip = true # Automatically strip symbols from the binary.
